css/index.css
:root {
font-size: 20px;
  --rose-white: #fcf0ec;
  --eclipse: #383838;
  --black: #000;
}
a {
  text-decoration: none;
  color: inherit;
}

/**.js-scroll {
  position: fixed;
  z-index: 10;
  top: 0;
  left: 0;
  overflow: hidden;
  width: 100%;
  will-change: transform;
}**/

.loading-page {
  background-color: var(--black);
  color: var(--rose-white);
  width: 100%;
  height: 100vh;
  opacity: 1;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
}
.loading-page .counter h1 {
  position:fixed;
  top:50%;
  left:50%;
  transform:translate(-50%, -50%);
  font-size:5vh;
  font-weight:bolder;
  margin-top:-10px;
}


h2 {margin:0; font-weight: 100;}

body{
  color: var(--eclipse);
  background-color: var(--rose-white);
  overflow-x: hidden;
  font-family: 'Nanum Myeongjo', sans-serif;
}
.container {
  display: grid;
  padding: 2vw;
  margin: 0 auto;
  grid-template-columns: 100%;
  grid-template-areas:
      'header'
      'meta'
      'grid';
  will-change: transform;
}
.gr-txt:first-child .gr-bottom {
  font-size: 2.5vw;
  line-height: 2.5vw;
}
.gr-bottom {
  margin: 2.59vh 0;
}
.gr-bottom a, .gr-bottom h2 {
  display: table;
}
.gr-title {
  font-size: 4vh;
}
.gr-top {
  font-family: 'DM Sans', serif;
  color: var(--black);
  margin: 0 0 25px 0;
  font-size: 0.9em;
}
.gr-top, .gr-bottom {
  display: -webkit-box;
  display: flex;
}
.gr-project {
  padding: 0 0 0 1.75vw;
}
.gr-year {
  font-size: 3vh;
  padding: 0 1.75vw 0.75vw 0;
}
h1{
  font-size: 12vw;
}
.meta--center {
  justify-self: center;
  padding: 10vh 0;
}
.meta__links.meta__links--column {
  font-size: 4vh;
  line-height: 2em;
}
.py-1 {
  width: 35vw;
  padding: 10vw;
}
.py-2 {
  width: 15vw;
}
.py-3 {
  width: 35vw;
}
.py-4 {
  align-self: center;
  width: 20vw;
  padding: 0 10vw;
}
.py-5 {
  display: flex;
}
.py-5 .gr-txt {
  width: 60vw;
  align-self: center;
  padding: 5vw;
}
.row {
  display: -ms-flexbox;
  display: flex;
  padding: 5vw;
}
.section {
  position: relative;
  width: 100%;
  display: block;
  z-index: 2;
}
.section-2 {
  display: flex;
  justify-content: flex-end;
}
.section-3 {
  display: flex;
  justify-content: end;
}
.over-hide {
  overflow: hidden;
}
.full-height {
  height: 75vh;
}
.z-bigger {
  z-index: 10 !important;
}
.section-center {
  position: absolute;
  top: 50%;
  left: 0;
  width: 100%;
  z-index: 10;
  transform: translateY(-50%);
}
main {
  position: relative;
  width: 100%;
  display: block;
  z-index: 2;
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}
.scroll-container {  
  position: absolute;  
  width: 100%;
  top: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
 transform-style: preserve-3d;
}
.img-loader {
  position: absolute;
}
.img-wrap img{
  width: 100%;
  height: auto;
  display: block;
  cursor: pointer;
}

/** project modal **/

.b-container {
  position: -webkit-sticky;
  text-transform: uppercase;
  position: sticky;
  cursor: pointer;
  z-index: 9999;
  height: 20%;
  width: 100%;
  top: 0;
}
.back-btn {
  color: inherit;
  font-size: 3vh;
  background: var(--eclipse);
  border: solid var(--eclipse);
  color: var(--rose-white);
  padding: 1vw;
  margin: 0px;
}
.item {
  display:none;
}
.modal {
  font-family: 'DM Sans', sans-serif;
  position:fixed;
  overflow: scroll;
  top:0;
  left:0;
  width:100%;
  height:100%;
  z-index:999;
  display:none;
}
.modal__wrapper {
  box-shadow: 0 1.75vh 2vh 0 rgba(32,33,34,.4);
  background-color: var(--rose-white);
  position: relative;
  margin: 0 auto;
  padding: 10px;
  z-index: 2;
}
.modal img {
  max-width:100%;
}
.modal__bg {
  position:absolute;
  left:0;
  top:0;
  width:100%;
  height:100%;
  background:rgba(0,0,0, .85);
  z-index:1;
}
.modal-is-showing 
.modal__bg {
  opacity:1;
  transition:opacity .35s ease-out;
}
.modal-is-closed 
.modal__bg {
  opacity:0;
}
.modal-is-showing 
.modal__wrapper {
  transform: translate3d(0, 0, 0);
  animation: modal-slide-up .85s ease-out;
}

.modal-is-closed 
.modal__wrapper {
  transform: translate3d(0, 61.8%, 0);
  animation: modal-slide-down .35s ease-out;
  opacity:0;
}

@keyframes modal-slide-down {
  0%   { transform: translate3d(0, 0%, 0); opacity:1; }
  100% { transform: translate3d(0, 61.8%, 0); opacity:0; }
}

@keyframes modal-slide-up {
  0%   { transform: translate3d(0, 61.8%, 0); opacity:0;  }
  100% { transform: translate3d(0, 0, 0); opacity:1;  }
}

.p-container {
  justify-content: center;
  font-size: 1.7vh;
  padding: 15vh;
  display: flex;
}
.p-info {
  line-height: 2.8pc;
}
.p-info-left {
  width: 35vw;
  padding-right: 5vw;
}
.p-info-right {   
  width: 53vw;
}
.p-info-title {
  padding-bottom: 1vw;
  color: var(--black);
  font-weight: 700;
}
.p-info-inline {
  padding-bottom: 3vh;
}
ul.p-features {
  padding-left: 20px;
  margin: 0;
}
li {
  padding: .5vh 0;
}
.project {
  position: fixed;
  right: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  bottom: -100%;
  overflow: auto;
  z-index: 999;
  transition: bottom 0.5s ease-in;
}
.project-column {
  place-content: center;
  align-items: flex-start;
  position: initial;
  display: flex;
}
.project-column div {
  padding: 0 1vw;
  display: block;
  width: 100%;
  object-fit: cover;
  object-position: top;
  overflow-anchor: none;
}
.project-hero {
  height: 50vh;
  margin: 5vw 0 0;
  position: relative;
  background-size: cover;
  background-repeat: no-repeat;
}
.project-column {
  position: initial;
}
.project p {
  font-size: 3vh;
  margin: 5px;
  margin: 0;
}
.project.open {
  bottom: 0%;
}
.project-inner {
  background-color: var(--rose-white);
  box-shadow: 0 1.75vh 2vh 0 rgba(32,33,34,.4);
}   
.show {
  display: block;
}   
.spacer {
  height: 105vh;
}
.squiggle {
  font-size: 4vh;
  padding: 5vh 0 0;
  text-align: center;
  color: var(--black);
}

@media only screen and (max-width: 1024px) {
  .gr-bottom {
      font-size: 3vh;
      display: flex !important;
  }
  .gr-txt {
      padding: 5vw 0 !important;
  }
  .gr-title {
      font-size: revert;
  }
  .gr-project {
      padding: 0 0 0 3.75vw;
  }
  .gr-year {
    width: 18.5vw;
  }
  .section-3, .section-2, .section-1, .row, .py-5 {
      display: block;
  }
  .py-1, .py-2, .py-3, .py-4, .py-5 {
      width: auto;
      padding: 1vh;
  }
  .py-5 .gr-txt {
      width: auto;
  }
  .p-container {
      font-size: 1.7vh;
      padding: 10vh 2vh;
      display: flex;
  }
  .p-info-left {
    width: 100vw;
  }
  .img-wrap img {
      display: block;
      height: 50vh;
      width: 100%;
      object-fit: cover;
      object-position: top;
      overflow-anchor: none;
  }
  .row {
      padding: 0 5vw;
  }
  .meta__links.meta__links--column {
    font-size: 3vh;
    line-height: 2em;
}
}

@media only screen and (max-width: 767px) {
  .gr-year {
    width: 32vw;
  }
  .p-container {
    font-size: 1.7vh;
    padding: 10vh 2vh;
    display: block;
  }
  .p-info {
    line-height: 1.2pc;
  }
  .p-info-left, .p-info-right {
    width: auto;
  }
}

